syntax = "proto2";

package st;

import "modules/cnoa_pnc/planning/proto/affine_transformation.proto";

message HalfPlaneProto {
  optional Vec2dProto start = 1;
  optional Vec2dProto end = 2;
}